# automat-rs

./: Cargo.toml  justfile
automat_core/: Cargo.toml
automat_core/src/: automat.rs  callback.rs  clipboard.rs  display_macro.rs  error.rs  lib.rs  macros.rs  main_loop.rs
automat_core/src/actions/: mod.rs  open_in_browser.rs  titlebar.rs
automat_core/src/actions/input/: keyboard.rs  mod.rs  mouse.rs
automat_core/src/actions/windows/: close_window.rs  maximize_window.rs  minimize_window.rs  mod.rs  set_window_title.rs
automat_core/src/automat/: fs_builder.rs  mod.rs  runner.rs
automat_core/src/triggers/: clipboard.rs  context.rs  fs_watcher.rs  interval.rs  mod.rs  process.rs  window.rs
automat_core/src/window/: exe_path.rs  list.rs  mod.rs  size.rs  state.rs  titlebar.rs  window_id.rs
playground/: Cargo.toml
playground/src/: main.rs
