[package]
name = "automat-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
tokio = { workspace = true }
thiserror = { workspace = true }
async-trait = "0.1.89"
parking_lot = "0.12.4"
paste = "1.0.15"
open = "5.3.2"
enigo = "0.6.1"
once_cell = "1.21.3"