[package]
name = "automat-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
tokio = { workspace = true }
thiserror = { workspace = true }
async-trait = "0.1.89"
parking_lot = "0.12.4"
paste = "1.0.15"
open = "5.3.2"
enigo = "0.6.1"
once_cell = "1.21.3"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.62.1", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
] }

[target.'cfg(target_os = "linux")'.dependencies]
x11 = { version = "2.21", features = ["xlib"] }

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.26.1"
objc = "0.2"
core-graphics = "0.25.0"
core-foundation = "0.10.1"